--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "express": "^4.18.2",
     "dotenv": "^16.3.1"
   },
+  "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "semantic-release": "^22.0.0"
+  },
   "keywords": [
     "redirect",
     "vercel",
