--- a/.releaserc.json
+++ b/.releaserc.json
@@ -61,7 +61,7 @@
     [
       "@semantic-release/npm",
       {
-        "npmPublish": true,
+        "npmPublish": false,
         "tarballDir": "dist"
       }
     ],
