--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -68,5 +68,6 @@ jobs:
           extra_plugins: |
             @semantic-release/changelog@6.0.3
             @semantic-release/git@10.0.1
+            @semantic-release/release-notes-generator@12.1.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
