--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
+    "@semantic-release/release-notes-generator": "^12.1.0",
     "conventional-changelog-conventionalcommits": "^7.0.2",
-    "semantic-release": "^22.0.0"
+    "semantic-release": "^23.0.0"
   },
   "keywords": [
     "redirect",
