ci: 简化语义化版本发布的工作流配置
移除对第三方插件的显式依赖，直接使用npx semantic-release

--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -63,11 +63,6 @@ jobs:
           npx semantic-release --version
       
       - name: 语义化版本发布
-        uses: cycjimmy/semantic-release-action@v4
-        with:
-          extra_plugins: |
-            @semantic-release/changelog@6.0.3
-            @semantic-release/git@10.0.1
-            @semantic-release/release-notes-generator@12.1.0
+        run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
