--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -7,12 +7,13 @@ on:
       - main
       - master
   # 支持 PR 事件用于 Release Drafter
-  pull_request:
+  pull_request_target:
     types: [opened, reopened, synchronize]
 
 jobs:
   # Release Drafter - 自动生成发布草稿
   draft_release:
+    if: github.event_name == 'pull_request_target'
     runs-on: ubuntu-latest
     permissions:
       contents: write
